[project]
name = "weather-ensemble-agent"
version = "0.1.0"
description = "AI agent for ensemble weather forecast analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "pre-commit>=4.0.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = []
