[project]
name = "weather-ensemble-agent"
dynamic = ["version"]
description = "AI agent for ensemble weather forecast analysis using Claude and multiple weather models"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Richard McDonald", email = "richard.mcdonald@connected-waters.com"}
]
keywords = [
    "ai-agent",
    "weather",
    "forecast",
    "ensemble",
    "claude",
    "anthropic",
    "llm",
    "tool-calling",
    "agentic-ai",
    "meteorology"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "anthropic>=0.75.0",
    "cyclopts>=4.4.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
]

[project.urls]
Homepage = "https://github.com/rmcd-mscb/weather-ensemble-agent"
Repository = "https://github.com/rmcd-mscb/weather-ensemble-agent"
Issues = "https://github.com/rmcd-mscb/weather-ensemble-agent/issues"
Documentation = "https://github.com/rmcd-mscb/weather-ensemble-agent#readme"
Changelog = "https://github.com/rmcd-mscb/weather-ensemble-agent/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "hatch>=1.16.2",
    "ipython>=9.9.0",
    "pre-commit>=4.0.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[project.scripts]
weather-agent = "weather_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/weather_agent/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_agent"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = []
